--- a/BE/package.json
+++ b/BE/package.json
@@ -18,9 +18,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
