--- a/BE/package.json
+++ b/BE/package.json
@@ -23,6 +23,7 @@
     "express-async-handler": "^1.2.0",
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
