--- a/FE/package.json
+++ b/FE/package.json
@@ -13,15 +13,25 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.7",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-auth-kit": "^3.0.2-alpha.19",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.0",
     "react-scroll": "^1.9.0",
-    "swiper": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "redux-localstorage-simple": "^2.5.1",
+    "swiper": "^10.0.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
