--- a/BE/.env
+++ b/BE/.env
@@ -2,6 +2,7 @@ PORT=4000
 # DATABASE=mongodb://localhost:27017/Ecommerce 
 # DATABASE=mongodb+srv://ahmarjabbar7:jn58WJyeLE94FQzd@cluster0.60itbae.mongodb.net/academy
 DATABASE=mongodb+srv://ahsan:password-123@cluster0.h3mh35m.mongodb.net/?retryWrites=true&w=majority
+# DATABASE=mongodb+srv://ArtisanA:V5RxLkiTEdKMRjoP@cluster0.kk7xmfe.mongodb.net/academy
 CORS=http://localhost:3001
 SECRET_JWT=AAMKMSKXMskjdcmsdkjcxsdxsxsxsxssdkcsdkjcnsk
 SECRET_EXPIRE=3d  
@@ -11,8 +12,8 @@ BASE_URL=https://www.blockchainex.pro
 HOST=smtp.hostinger.com
 SERVICE=hostingers
 EMAIL_PORT=587 
-USER=support@blockchainltd.tech
-PASS=Admin1234@
+USER=Info@artisanuw.com.au
+PASS=CoweDqek(a2hA9c}kcF@
  
 
 
