--- a/BE/.env
+++ b/BE/.env
@@ -8,9 +8,9 @@ SECRET_JWT=AAMKMSKXMskjdcmsdkjcxsdxsxsxsxssdkcsdkjcnsk
 SECRET_EXPIRE=3d  
 TOKEN_EXPIRE=3
 # 
-BASE_URL=https://www.blockchainex.pro
-HOST=smtp.hostinger.com
-SERVICE=hostingers
+BASE_URL=https://www.artisanuw.com.au
+HOST=smtp.office365.com
+SERVICE=Office365
 EMAIL_PORT=587 
 USER=Info@artisanuw.com.au
 PASS=CoweDqek(a2hA9c}kcF@
