--- a/BE/.env
+++ b/BE/.env
@@ -12,8 +12,8 @@ BASE_URL=https://www.artisanuw.com.au
 HOST=smtp.office365.com
 SERVICE=Office365
 EMAIL_PORT=587 
-USER=Info@artisanuw.com.au
-PASS=CoweDqek(a2hA9c}kcF@
+USER=academy@artisanuw.com.au
+PASS=gzUc[gbn6bacopb
  
 
 
