--- a/BE/.env
+++ b/BE/.env
@@ -1,22 +1,18 @@
-PORT=4000
 # DATABASE=mongodb://localhost:27017/Ecommerce 
 # DATABASE=mongodb+srv://ahmarjabbar7:jn58WJyeLE94FQzd@cluster0.60itbae.mongodb.net/academy
-DATABASE=mongodb+srv://ahsan:password-123@cluster0.h3mh35m.mongodb.net/?retryWrites=true&w=majority
-# DATABASE=mongodb+srv://ArtisanA:V5RxLkiTEdKMRjoP@cluster0.kk7xmfe.mongodb.net/academy
+DATABASE=mongodb+srv://ArtisanA:V5RxLkiTEdKMRjoP@cluster0.kk7xmfe.mongodb.net/academy
+PORT=5000
+# DATABASE=mongodb+srv://ahsan:password-123@cluster0.h3mh35m.mongodb.net/?retryWrites=true&w=majority
 CORS=http://localhost:3001
 SECRET_JWT=AAMKMSKXMskjdcmsdkjcxsdxsxsxsxssdkcsdkjcnsk
 SECRET_EXPIRE=3d  
 TOKEN_EXPIRE=3
-# 
 BASE_URL=https://www.artisanuw.com.au
 HOST=smtp.office365.com
 SERVICE=Office365
 EMAIL_PORT=587 
 USER=academy@artisanuw.com.au
 PASS=gzUc[gbn6bacopb
- 
-
-
 CLOUDINARY_CLIENT_NAME=dzkk7ubqq
 CLOUDINARY_CLIENT_API=889131577884438
 CLOUDINARY_CLIENT_SECRET=AVh8qLZkL5EFPlkHdmc78YqGNmI
