--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.1.3",
     "@mui/material": "^5.15.7",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.1",
@@ -35,7 +36,7 @@
     "react-toastify": "^10.0.4",
     "redux-localstorage-simple": "^2.5.1",
     "swiper": "^10.0.4",
-    "yup": "^1.3.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
