--- a/BE/.env
+++ b/BE/.env
@@ -1,8 +1,8 @@
 # DATABASE=mongodb://localhost:27017/Ecommerce 
 # DATABASE=mongodb+srv://ahmarjabbar7:jn58WJyeLE94FQzd@cluster0.60itbae.mongodb.net/academy
-DATABASE=mongodb+srv://ArtisanA:V5RxLkiTEdKMRjoP@cluster0.kk7xmfe.mongodb.net/academy
+# DATABASE=mongodb+srv://ArtisanA:V5RxLkiTEdKMRjoP@cluster0.kk7xmfe.mongodb.net/academy
 PORT=5000
-# DATABASE=mongodb+srv://ahsan:password-123@cluster0.h3mh35m.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://ahsan:password-123@cluster0.h3mh35m.mongodb.net/?retryWrites=true&w=majority
 CORS=http://localhost:3001
 SECRET_JWT=AAMKMSKXMskjdcmsdkjcxsdxsxsxsxssdkcsdkjcnsk
 SECRET_EXPIRE=3d  
